# steam-acolyte

./: .appveyor.yml  .travis.yml  CHANGES.rst  MANIFEST.in  Pipfile  README.rst  acolyte.desktop  setup.cfg  setup.py  steam-acolyte.py  steam-acolyte.spec  steam_acolyte.py
.github/: PKGBUILD  acolyte.desktop
.github/workflows/: codeql-analysis.yml  python-package.yml  windows-installer.yml
steam_acolyte/: __init__.py  __main__.py  app.py  async_.py  funcwrap.py  resources.py  steam.py  steam_linux.py  steam_win32.py  theme.py  util.py  window.css  window.py
