[options]
py_modules = steam_acolyte
python_requires = >=3.5
install_requires =
    pyqt5
    vdf
    docopt

[options.entry_points]
console-scripts =
    steam-acolyte = steam_acolyte:main

[metadata]
name             = steam-acolyte
description      = Lightweight user account switcher/login keeper for steam
url              = https://github.com/coldfix/steam-acolyte
long_description = file: README.rst, file: CHANGES.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
license          = Unlicense
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    License :: Public Domain
    Topic :: Games/Entertainment
long_description_content_type = text/x-rst

[flake8]
ignore = E221,E241,E251,E402,W504
exclude = docs,.git,build,__pycache__,dist,.eggs
max-line-length = 85
